apps/archivers/archivers-listener/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivers-listener
  namespace: archivers
  labels:
    app: archivers-listener
spec:
  selector:
    matchLabels:
      app: archivers-listener
  template:
    metadata:
      labels:
        app: archivers-listener
    spec:
      serviceAccountName: archivers-listener
      automountServiceAccountToken: true
      nodeSelector:
        "vke.vultr.com/node-pool": "archivers-main"
      containers:
      - name: archivers-listener
        image: hyeonwoo5342/archivers-listener:24
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: '300Mi'
            cpu: '150m'
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 25
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
