apps/archivers/archivers-listener/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archivers-listener-ingress
  namespace: archivers
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: archivers.app
    http:
      paths:
      - path: /media-api/(.*)
        pathType: Prefix
        backend:
          service:
            name: archivers-listener
            port:
              number: 3000
      - path: /bull/static(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: archivers-listener
            port:
              number: 3000
      - path: /bull/api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: archivers-listener
            port:
              number: 3000
